fixing overflow of grid class on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ pre{
 }
 
 /* Tablets and under */
-@media (max-width: 768px) {
+@media (max-width: 917px) {
   .grid,
   .showcase .grid,
   .stats .grid,
@@ -303,7 +303,7 @@ pre{
   .cloud .grid,
   .features .grid,
   .docs-main .grid{
-    grid-template-columns: 1fr;
+    grid-template-columns: minmax(0, 1fr);
     grid-template-rows: 1fr;
   }
 
